--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Distribucion de productos de Perfumeria, Limpieza e Insecticida de las mejores marcas en Entre Rios">
   <meta name="keywords"
-    content="parana, entre rios, primeras marcas, pulpito, raid, colgate, algabo, pilas, duracell, pegamentos, poxi-ran, poxipol, unilever, dove, tulipan, preservativos, unipox, hedaly, tinturas, mayorista, la gotita, fuyi, eccole, prime, kolynos, shampoo, acondicionador, pantene, sedal, ultra, veneno, rata, energizer">
+    content="parana, colonia avellaneda, entre rios, primeras marcas, pulpito, raid, colgate, algabo, pilas, duracell, pegamentos, poxi-ran, poxipol, unilever, dove, tulipan, preservativos, unipox, hedaly, tinturas, mayorista, la gotita, fuyi, eccole, prime, kolynos, shampoo, acondicionador, pantene, sedal, ultra, veneno, rata, energizer">
   <meta name="actor" content="Romero Ismael">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
