--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <!--pie de pagina-->
   <footer class="pie1">
     <div class="pie2">
-      <h2>Distribuciones de Marcas Líderes en Perfumería-Limpieza e Insecticida</h2>
+      <h2>Distribuciones de Marcas Lideres en Perfumería-Limpieza e Insecticida</h2>
     </div>
     <div class="pie3">
       <div>
