--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
           <img src="./img/servicios.jpg" alt="servicios">
         </div>
       </a>
-
+      <a href="./pages/contacto.html">
+        <div class="contacto">
+          <h2>CONTACTO</h2>
+          <img src="./img/contactox.jpg" alt="contacto">
+        </div>
+      </a>
     </section>
 
-    <div id="div-totop" class="cmn-divfloat">
-      <a href="#span-top" class="btn btn-primary cmn-btncircle">
-        <i class="fa fa-arrow-up"></i>
-      </a>
-    </div>
   </main>
 
   <!--pie de pagina-->
@@ -203,6 +203,7 @@
         <h3>Direccion: Ruta 12 Km 450</h3>
       </div>
     </div>
+
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
