link logo nav y link logo footer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <!-- encabezado -->
   <header class="encab">
     <!-- navbar-->
-    <img class="animate__animated animate__bounce" src="./img/logonav.png" alt="Logo de Leo Distribuciones">
+    <a href="./index.html">
+      <img class="animate__animated animate__bounce" src="./img/logonav.png" alt="Logo de Leo Distribuciones">
+    </a>
     <nav class="nav1">
       <ul class="bar">
         <li>
@@ -194,7 +196,9 @@
     </div>
     <div class="pie3">
       <div>
-        <img src="./img/logoleo2.png" alt="logo circulo">
+        <a href="./index.html">
+          <img src="./img/logoleo2.png" alt="logo circulo">
+      </a>
       </div>
       <div>
         <h3>Contactos</h3>
