--- a/pages/productos.html
+++ b/pages/productos.html
@@ -29,7 +29,9 @@
     <!-- encabezado -->
     <header class="encab">
         <!-- navbar-->
-        <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+        <a href="../index.html">
+            <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+        </a>
         <nav class="nav1">
             <ul class="bar">
                 <li>
@@ -313,7 +315,9 @@
             <h2>Distribuciones de Marcas Líderes en Perfumería-Limpieza e Insecticida</h2>
         </div>
         <div class="pie3">
-            <img src="../img/logoleo2.png" alt="logo circulo">
+            <a href="./productos.html">
+                <img src="../img/logoleo2.png" alt="logo circulo">
+            </a>
             <div>
                 <h3>Contactos</h3>
                 <h3>Telefono: 3434247170</h3>
