--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,9 @@
   <!-- encabezado -->
   <header class="encab">
     <!-- navbar-->
-    <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+    <a href="../index.html">
+      <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+    </a>
     <nav class="nav1">
       <ul class="bar">
         <li>
@@ -92,7 +94,7 @@
             <p>TELÉFONO: 3434247170</p>
             <p>WHATSAPP: 3434753611</P>
             <p>EMAIL: leodistribuciones@gmail.com</p>
-            <button type="button" class="bg-warning rounded-pill" style="width: 60%">VER MAPA</button>
+            <a href="https://www.google.com/maps/place/31%C2%B046'08.8%22S+60%C2%B024'39.4%22W/@-31.765913,-60.413741,15z/data=!4m4!3m3!8m2!3d-31.7691111!4d-60.4109444?hl=es" target="_blank"><button type="button" class="bg-warning rounded-pill" style="width: 60%">VER MAPA</button></a>
           </div>
         </section>
         <section class="col-12 col-lg-9 mb-2 ">
@@ -138,7 +140,11 @@
       <h2>Distribuciones de Marcas Líderes en Perfumería-Limpieza e Insecticida</h2>
     </div>
     <div class="pie3">
-      <div><img src="../img/logoleo2.png" alt="logo circulo"></div>
+      <div>
+        <a href="./contacto.html">
+          <img src="../img/logoleo2.png" alt="logo circulo">
+      </a>
+      </div>
       <div>
         <h3>Contactos</h3>
         <h3>Telefono: 3434247170
