--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -27,7 +27,9 @@
     <!-- encabezado -->
     <header class="encab">
         <!-- navbar-->
-        <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+        <a href="../index.html">
+            <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+          </a>
         <nav class="nav1">
             <ul class="bar">
                 <li>
@@ -159,7 +161,9 @@
         </div>
         <div class="pie3">
             <div>
-                <img src="../img/logoleo2.png" alt="logo circulo">
+                <a href="./nuestrosservicios.html">
+                    <img src="../img/logoleo2.png" alt="logo circulo">
+                </a>
             </div>
             <div>
                 <h3>Contactos</h3>
