--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,6 +24,7 @@
 </head>
 
 <!-- grid conteiner-->
+
 <body class="gridconteiner">
   <!-- encabezado -->
   <header class="encab">
@@ -53,7 +54,8 @@
     <nav class="navbar navbar-expand-lg bg-warning d-md-none">
       <div class="container-fluid">
         <a class="navbar-brand fs-6" href="#">LEO DISTRIBUCIONES SRL</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -94,7 +96,9 @@
             <p>TELÉFONO: 3434247170</p>
             <p>WHATSAPP: 3434753611</P>
             <p>EMAIL: leodistribuciones@gmail.com</p>
-            <a href="https://www.google.com/maps/place/31%C2%B046'08.8%22S+60%C2%B024'39.4%22W/@-31.765913,-60.413741,15z/data=!4m4!3m3!8m2!3d-31.7691111!4d-60.4109444?hl=es" target="_blank"><button type="button" class="bg-warning rounded-pill" style="width: 60%">VER MAPA</button></a>
+            <a href="https://www.google.com/maps/place/31%C2%B046'08.8%22S+60%C2%B024'39.4%22W/@-31.765913,-60.413741,15z/data=!4m4!3m3!8m2!3d-31.7691111!4d-60.4109444?hl=es"
+              target="_blank"><button type="button" class="bg-warning rounded-pill" style="width: 60%">VER
+                MAPA</button></a>
           </div>
         </section>
         <section class="col-12 col-lg-9 mb-2 ">
@@ -143,7 +147,7 @@
       <div>
         <a href="./contacto.html">
           <img src="../img/logoleo2.png" alt="logo circulo">
-      </a>
+        </a>
       </div>
       <div>
         <h3>Contactos</h3>
