botton subir arriba

--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
         </div>
       </a>
     </section>
-
+    <a href="./index.html">
+      <img class="flecha" src="./img/flecha.png" alt="fleta">
+    </a>
   </main>
 
   <!--pie de pagina-->
@@ -198,7 +200,7 @@
       <div>
         <a href="./index.html">
           <img src="./img/logoleo2.png" alt="logo circulo">
-      </a>
+        </a>
       </div>
       <div>
         <h3>Contactos</h3>
