--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -131,6 +131,9 @@
               <button class="bg-warning rounded-pill col-3" type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </section>
+        <a href="./contacto.html">
+          <img class="flecha" src="./img/flecha.png" alt="fleta">
+        </a>
       </div>
     </div>
 
