--- a/pages/nuestrasmarcas.html
+++ b/pages/nuestrasmarcas.html
@@ -374,6 +374,9 @@
       </div>
       <img class="order" src="../img/m25.jpeg" alt="energizer">
     </section>
+    <a href="./nuestrasmarcas.html">
+      <img class="flecha" src="./img/flecha.png" alt="fleta">
+    </a>
   </main>
 
   <!--pie de pagina-->
