--- a/pages/productos.html
+++ b/pages/productos.html
@@ -308,6 +308,9 @@
                 </li>
             </ul>
         </section>
+        <a href="./productos.html">
+            <img class="flecha" src="./img/flecha.png" alt="fleta">
+          </a>
     </main>
     <!--pie de pagina-->
     <footer class="pie1">
