botton subir arriba imagenes

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -132,7 +132,7 @@
           </form>
         </section>
         <a href="./contacto.html">
-          <img class="flecha" src="./img/flecha.png" alt="fleta">
+          <img class="flecha" src="../img/flecha.png" alt="fleta">
         </a>
       </div>
     </div>
