--- a/pages/nuestrasmarcas.html
+++ b/pages/nuestrasmarcas.html
@@ -375,7 +375,7 @@
       <img class="order" src="../img/m25.jpeg" alt="energizer">
     </section>
     <a href="./nuestrasmarcas.html">
-      <img class="flecha" src="./img/flecha.png" alt="fleta">
+      <img class="flecha" src="../img/flecha.png" alt="fleta">
     </a>
   </main>
 
