--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -154,7 +154,7 @@
             <iframe src="https://www.youtube.com/embed/h-_d8Ogy7Gc" frameborder="0" allowfullscreen></iframe>
         </section>
         <a href="./nuestrosservicios.html">
-            <img class="flecha" src="./img/flecha.png" alt="fleta">
+            <img class="flecha" src="../img/flecha.png" alt="fleta">
           </a>
     </main>
     <!--pie de pagina-->
