--- a/pages/productos.html
+++ b/pages/productos.html
@@ -309,7 +309,7 @@
             </ul>
         </section>
         <a href="./productos.html">
-            <img class="flecha" src="./img/flecha.png" alt="fleta">
+            <img class="flecha" src="../img/flecha.png" alt="fleta">
           </a>
     </main>
     <!--pie de pagina-->
