--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <header class="encab">
     <!-- navbar-->
     <a href="./index.html">
-      <img class="animate__animated animate__bounce" src="./img/logonav.png" alt="Logo de Leo Distribuciones">
+      <img class="animate__animated animate__bounce" id="seccionindex" src="./img/logonav.png"
+        alt="Logo de Leo Distribuciones">
     </a>
     <nav class="nav1">
       <ul class="bar">
@@ -186,7 +187,7 @@
         </div>
       </a>
     </section>
-    <a href="./index.html">
+    <a href="#seccionindex">
       <img class="flecha" src="./img/flecha.png" alt="fleta">
     </a>
   </main>
