--- a/pages/nuestrasmarcas.html
+++ b/pages/nuestrasmarcas.html
@@ -29,7 +29,8 @@
   <header class="encab">
     <!-- navbar-->
     <a href="../index.html">
-      <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+      <img class="animate__animated animate__bounce" id="seccion" src="../img/logonav.png"
+        alt="Logo de Leo Distribuciones">
     </a>
     <nav class="nav1">
       <ul class="bar">
@@ -374,7 +375,7 @@
       </div>
       <img class="order" src="../img/m25.jpeg" alt="energizer">
     </section>
-    <a href="./nuestrasmarcas.html">
+    <a href="#seccion">
       <img class="flecha" src="../img/flecha.png" alt="fleta">
     </a>
   </main>
@@ -388,7 +389,7 @@
       <div>
         <a href="./nuestrasmarcas.html">
           <img src="../img/logoleo2.png" alt="logo circulo">
-      </a>
+        </a>
       </div>
       <div>
         <h3>Contactos</h3>
