--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -28,7 +28,7 @@
     <header class="encab">
         <!-- navbar-->
         <a href="../index.html">
-            <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+            <img class="animate__animated animate__bounce" id="seccionserv" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
           </a>
         <nav class="nav1">
             <ul class="bar">
@@ -153,7 +153,7 @@
             <h3>¿Porque Comprar en LEO DISTRIBUCIONES?</h3>
             <iframe src="https://www.youtube.com/embed/h-_d8Ogy7Gc" frameborder="0" allowfullscreen></iframe>
         </section>
-        <a href="./nuestrosservicios.html">
+        <a href="#seccionserv">
             <img class="flecha" src="../img/flecha.png" alt="fleta">
           </a>
     </main>
