--- a/pages/productos.html
+++ b/pages/productos.html
@@ -30,7 +30,8 @@
     <header class="encab">
         <!-- navbar-->
         <a href="../index.html">
-            <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+            <img class="animate__animated animate__bounce" id="seccionprod" src="../img/logonav.png"
+                alt="Logo de Leo Distribuciones">
         </a>
         <nav class="nav1">
             <ul class="bar">
@@ -308,9 +309,9 @@
                 </li>
             </ul>
         </section>
-        <a href="./productos.html">
+        <a href="#seccionprod">
             <img class="flecha" src="../img/flecha.png" alt="fleta">
-          </a>
+        </a>
     </main>
     <!--pie de pagina-->
     <footer class="pie1">
