--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,8 @@
   <header class="encab">
     <!-- navbar-->
     <a href="../index.html">
-      <img class="animate__animated animate__bounce" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
+      <img class="animate__animated animate__bounce" id="seccioncont" src="../img/logonav.png"
+        alt="Logo de Leo Distribuciones">
     </a>
     <nav class="nav1">
       <ul class="bar">
@@ -131,7 +132,7 @@
               <button class="bg-warning rounded-pill col-3" type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </section>
-        <a href="./contacto.html">
+        <a href="#seccioncont">
           <img class="flecha" src="../img/flecha.png" alt="fleta">
         </a>
       </div>
