font span servicios y tamaño logo footer

--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -150,7 +150,7 @@
                 </div>
         </section>
         <section class="listservicios2">
-            <h3>¿Porque Comprar en LEO DISTRIBUCIONES?</h3>
+            <span>¿Porque Comprar en LEO DISTRIBUCIONES?</span>
             <iframe src="https://www.youtube.com/embed/h-_d8Ogy7Gc" frameborder="0" allowfullscreen></iframe>
         </section>
         <a href="#seccionserv">
