espacios git ignore

--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -28,8 +28,9 @@
     <header class="encab">
         <!-- navbar-->
         <a href="../index.html">
-            <img class="animate__animated animate__bounce" id="seccionserv" src="../img/logonav.png" alt="Logo de Leo Distribuciones">
-          </a>
+            <img class="animate__animated animate__bounce" id="seccionserv" src="../img/logonav.png"
+                alt="Logo de Leo Distribuciones">
+        </a>
         <nav class="nav1">
             <ul class="bar">
                 <li>
@@ -155,7 +156,7 @@
         </section>
         <a href="#seccionserv">
             <img class="flecha" src="../img/flecha.png" alt="fleta">
-          </a>
+        </a>
     </main>
     <!--pie de pagina-->
     <footer class="pie1">
