--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <li>
           <a href="./pages/contacto.html">CONTACTO</a>
         </li>
+        <li>
+          <a href="./pages/registro.html">REGISTRO</a>
+        </li>
       </ul>
     </nav>
     <nav class="navbar navbar-expand-lg bg-warning d-md-none">
@@ -215,6 +218,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <script src="./main.js"> </script>
 
 </body>
 
