--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,6 +50,9 @@
         <li>
           <a href="./contacto.html">CONTACTO</a>
         </li>
+        <li>
+          <a href="../pages/registro.html">REGISTRO</a>
+        </li>
       </ul>
     </nav>
     <nav class="navbar navbar-expand-lg bg-warning d-md-none">
@@ -75,6 +78,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active fs-6" aria-current="page" href="./contacto.html">CONTACTO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fs-6" aria-current="page" href="./registro.html">REGISTRO</a>
             </li>
           </ul>
         </div>
