--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -48,6 +48,9 @@
                 <li>
                     <a href="./contacto.html">CONTACTO</a>
                 </li>
+                <li>
+                    <a href="../pages/registro.html">REGISTRO</a>
+                  </li>
             </ul>
         </nav>
         <nav class="navbar navbar-expand-lg bg-warning d-md-none">
@@ -76,6 +79,9 @@
                         <li class="nav-item">
                             <a class="nav-link active fs-6" aria-current="page" href="./contacto.html">CONTACTO</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active fs-6" aria-current="page" href="./registro.html">REGISTRO</a>
+                          </li>
                     </ul>
                 </div>
             </div>
