--- a/pages/productos.html
+++ b/pages/productos.html
@@ -50,6 +50,16 @@
                 <li>
                     <a href="./contacto.html">CONTACTO</a>
                 </li>
+                <li>
+                    <a href="../pages/registro.html">REGISTRO</a>
+                  </li>
+                <li class="carrito carritoOculto">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
+                        class="bi bi-cart4" viewBox="0 0 16 16">
+                        <path
+                            d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+                    </svg>
+                </li>
             </ul>
 
         </nav>
@@ -79,6 +89,13 @@
                         <li class="nav-item">
                             <a class="nav-link active fs-6" aria-current="page" href="./contacto.html">CONTACTO</a>
                         </li>
+                        <li class="carrito carritoHidd">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
+                                class="bi bi-cart4 " viewBox="0 0 16 16">
+                                <path
+                                    d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+                            </svg>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -87,228 +104,75 @@
 
     <main class="main3">
         <h2 class="tituloproductos"> PRODUCTOS</h2>
-        <section class="listproductos">
+        <section class="listproductos carritoOculto" >
             <div>
                 <h2>ALGABO</h2>
             </div>
             <ul>
-                <li>
+                <li id="1">
                     <span>JABON LIQUIDO DOY PACK</span>
                     <img src="../img/ALGABO1.jpg" alt="JABON LIQUIDO DOY PACK">
+                    <p class="Precio"> $100 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="2">
                     <span>JABON LIQUIDO ANTIBACTERIAL</span>
                     <img src="../img/ALGABO2.jpg" alt="JABON LIQUIDO ANTIBACTERIAL">
+                    <p class="Precio"> $200 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="3">
                     <span>JABON LIQUIDO CON DOSIFICADOR</span>
                     <img src="../img/ALGABO3.jpg" alt="JABON LIQUIDO CON DOSIFICADOR">
+                    <p class="Precio"> $300 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="4">
                     <span>GEL CAPILAR</span>
                     <img src="../img/ALGABO4.jpg" alt="GEL CAPILAR">
+                    <p class="Precio"> $400 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="5">
                     <span>COLONIA 500CC</span>
                     <img src="../img/ALGABO5.jpg" alt="COLONIA 500CC">
+                    <p class="Precio"> $500 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="6">
                     <span>CREMAS PARA PEINAR</span>
                     <img src="../img/ALGABO6.jpg" alt="CREMAS PARA PEINAR">
+                    <p class="Precio"> $600 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="7">
                     <span>BAÑO CAPILAR</span>
                     <img src="../img/ALGABO7.jpg" alt="BAÑO CAPILAR">
+                    <p class="Precio"> $700 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="8">
                     <span>CREMA CORPORAL</span>
                     <img src="../img/ALGABO8.jpg" alt="CREMA CORPORAL">
+                    <p class="Precio"> $800 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="9">
                     <span>AGUA MICELAR</span>
                     <img src="../img/ALGABO9.jpg" alt="AGUA MICELAR">
+                    <p class="Precio"> $900 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
+                <li id="10">
                     <span>ALCOHOL EN GEL - POCKET 70ML</span>
                     <img src="../img/ALGABO10.jpg" alt="ALCOHOL EN GEL - POCKET 70ML">
+                    <p class="Precio"> $1000 </p>
+                    <button class="btn btn-warning mb-2"> Agregar al carrito </button>
                 </li>
-                <li>
-                    <span>TOALLITAS DESMAQUILLANTES</span>
-                    <img src="../img/ALGABO11.jpg" alt="TOALLITAS DESMAQUILLANTES">
-                </li>
-                <li>
-                    <span>QUITAESMALTES</span>
-                    <img src="../img/ALGABO12.jpg" alt="QUITAESMALTES">
-                </li>
-                <li>
-                    <span>HISOPOS</span>
-                    <img src="../img/ALGABO13.jpg" alt="HISOPOS">
-                </li>
-                <li>
-                    <span>ESPUMA Y CREMA DE AFEITAR</span>
-                    <img src="../img/ALGABO14.jpg" alt="ESPUMA Y CREMA DE AFEITAR">
-                </li>
-                <li>
-                    <span>ALCOHOL EN GEL - C/ DOSIFICADOR</span>
-                    <img src="../img/ALGABO15.jpg" alt="ALCOHOL EN GEL - C/ DOSIFICADOR">
-                </li>
-                <li>
-                    <span>ENJUAGUE BUCAL</span>
-                    <img src="../img/ALGABO16.jpg" alt="ENJUAGUE BUCAL">
-                </li>
-                <li>
-                    <span>ACEITE</span>
-                    <img src="../img/ALGABO17.jpg" alt="ACEITE">
-                </li>
-                <li>
-                    <span>SHAMPOO</span>
-                    <img src="../img/ALGABO18.jpg" alt="SHAMPOO">
-                </li>
-                <li>
-                    <span>JABON 80GR</span>
-                    <img src="../img/ALGABO19.jpg" alt="JABON 80GR">
-                </li>
-                <li>
-                    <span>FECULA</span>
-                    <img src="../img/ALGABO20.jpg" alt="FECULA">
-                </li>
-                <li>
-                    <span>COLONIAS</span>
-                    <img src="../img/ALGABO21.jpg" alt="COLONIAS">
-                </li>
-                <li>
-                    <span>ACONDICIONADOR</span>
-                    <img src="../img/ALGABO22.jpg" alt="ACONDICIONADOR">
-                </li>
-                <li>
-                    <span>TALCOS PARA PIES</span>
-                    <img src="../img/ALGABO23.jpg" alt="TALCOS PARA PIES ( 100GR-200GR-SPRAY)">
-                </li>
-                <li>
-                    <span>SHAMPO KIDS</span>
-                    <img src="../img/ALGABO24.jpg" alt="SHAMPO KIDS">
-                </li>
-                <li>
-                    <span>TALCOS CORPORALES</span>
-                    <img src="../img/ALGABO25.jpg" alt="TALCOS CORPORALES">
-                </li>
-                <li>
-                    <span>DESINFECTANTE EN AEROSOL</span>
-                    <img src="../img/ALGABO26.jpg" alt="DESINFECTANTE EN AEROSOL">
-                </li>
-                <li>
-                    <span>ANTIGRASA C/ GATILLO</span>
-                    <img src="../img/ALGABO27.jpg" alt="ANTIGRASA C/ GATILLO">
-                </li>
-                <li>
-                    <span>LIMPIADOR DE PISO</span>
-                    <img src="../img/ALGABO28.jpg" alt="LIMPIADOR DE PISO">
-                </li>
+
             </ul>
         </section>
-        <section class="listproductos2">
-            <h2>LIMPIEZA / HOGAR </h2>
-            <ul>
-                <li>
-                    <span>POMADA EN LATA</span>
-                    <img src="../img/limpieza1.jpg" alt="POMADA EN LATA">
-                </li>
-                <li>
-                    <span>POMADAS LIQUIDAS</span>
-                    <img src="../img/limpieza2.jpg" alt="POMADAS LIQUIDAS">
-                </li>
-                <li>
-                    <span>PLANTILLAS</span>
-                    <img src="../img/limpieza3.jpg" alt="PLANTILLAS">
-                </li>
-                <li>
-                    <span>CALORITOS</span>
-                    <img src="../img/limpieza4.jpg" alt="CALORITOS">
-                </li>
-                <li>
-                    <span>TETINAS LATEX</span>
-                    <img src="../img/limpieza5.jpg" alt="TETINAS LATEX">
-                </li>
-                <li>
-                    <span>NAFTALINA</span>
-                    <img src="../img/limpieza6.jpg" alt="NAFTALINA">
-                </li>
-                <li>
-                    <span>ANILINAS</span>
-                    <img src="../img/limpieza7.jpg" alt="ANILINAS">
-                </li>
-                <li>
-                    <span>CORDONES</span>
-                    <img src="../img/limpieza8.jpg" alt="CORDONES">
-                </li>
-                <li>
-                    <span>SOLUCION FISIOLOGICA</span>
-                    <img src="../img/limpieza9.jpg" alt="SOLUCION FISIOLOGICA - AGUA OXIGENADA">
-                </li>
-                <li>
-                    <span>ALGODON EJEMPLAR</span>
-                    <img src="../img/limpieza10.jpg" alt="ALGODON EJEMPLAR">
-                </li>
-                <li>
-                    <span>CURITAS TRANSPIEL</span>
-                    <img src="../img/limpieza11.jpg" alt="CURITAS TRANSPIEL">
-                </li>
-                <li>
-                    <span>ALCOHOL LIQUIDO 500ML</span>
-                    <img src="../img/limpieza12.jpg" alt="ALCOHOL LIQUIDO 500ML">
-                </li>
-                <li>
-                    <span>ALCOHOL LIQUIDO 250ML</span>
-                    <img src="../img/limpieza13.jpg" alt="ALCOHOL LIQUIDO 250ML">
-                </li>
-                <li>
-                    <span>GASA X10 SOBRES</span>
-                    <img src="../img/limpieza14.jpg" alt="GASA X10 SOBRES">
-                </li>
-                <li>
-                    <span>AZUFRE 20 SOBRES x5U</span>
-                    <img src="../img/limpieza15.jpg" alt="AZUFRE 20 SOBRES x5U">
-                </li>
-            </ul>
-        </section>
-        <section class="listproductos3">
-            <h2>PERFUMERIA </h2>
-            <ul>
-                <li>
-                    <span>TOALLAS FEMENINAS DONCELLA</span>
-                    <img src="../img/perfumeria1.jpg" alt="TOALLAS FEMENINAS DONCELLA">
-                </li>
-                <li>
-                    <span>PROTECTORES DIARIOS DONCELLA</span>
-                    <img src="../img/perfumeria2.jpg" alt="PROTECTORES DIARIOS DONCELLA">
-                </li>
-                <li>
-                    <span>TOALLITAS HUMEDAS BELABIN</span>
-                    <img src="../img/perfumeria3.jpg" alt="TOALLITAS HUMEDAS BELABIN">
-                </li>
-                <li>
-                    <span>MANTECA CACAO</span>
-                    <img src="../img/perfumeria4.jpg" alt="MANTECA CACAO">
-                </li>
-                <li>
-                    <span>TULIPAN CLASICO</span>
-                    <img src="../img/perfumeria5.jpg" alt="TULIPAN CLASICO">
-                </li>
-                <li>
-                    <span>PRIME SURTIDO</span>
-                    <img src="../img/perfumeria6.jpg" alt="PRIME SURTIDO">
-                </li>
-            </ul>
-        </section>
-        <section class="listproductos4">
-            <h2>TINTURA </h2>
-            <ul>
-                <li>
-                    <span>LINEA HEDALY</span>
-                    <img src="../img/tintura1.jpg" alt="LINEA HEDALY">
-                </li>
-            </ul>
-        </section>
+
         <a href="#seccionprod">
             <img class="flecha" src="../img/flecha.png" alt="fleta">
         </a>
